# zxmake-examples

./: .clangd  .emmyrc.json  .gitignore  .markdownlint.json  CPPLINT.cfg  Dockerfile  Makefile  README.md  README_zh.md  xmake.lua
.github/workflows/: bazel_examples.yml  cmake-examples.yml  cmake_examples.yml  publish-docker.yml  publish_docker.yml  xmake-examples.yml
bazel-cross-build/: .bazelrc  MODULE.bazel  README.md  bazel-bazel-cross-build  xmake.lua
bazel-cross-build/custom-toolchain/: MODULE.bazel  bazel-custom-toolchain  build.sh  xmake.lua
bazel-cross-build/hermetic_cc_toolchain/: MODULE.bazel
bazel-cross-build/lib/: hello-time.cc
bazel-cross-build/main/: hello-greet.cc  hello-world.cc
bazel-cross-build/toolchain/: BUILD  cc_toolchain_config.bzl
bazel-cross-build/toolchains_arm_gnu/: README.md  bazel-bazel-cross-build2  bazel-toolchains_arm_gnu
bazel-cross-build2/: MODULE.bazel
bazel-cross-build2/examples/arm-linux/: main.cc
bazel-cuda-target/: MODULE.bazel  README.md  bazel-bazel-cuda-target  xmake.lua
bazel-cuda-target/basic-macros/: main.cu
bazel-cuda-target/rdc/: a.cu
bazel-cuda-target/thrust/: BUILD.bazel
bazel/01-cross-build/custom-toolchain/: .bazelrc  MODULE.bazel  README.md  build.sh
bazel/01-cross-build/custom-toolchain/toolchain/: BUILD
bazel/01-cross-build/hermetic_cc_toolchain/: .bazelrc  MODULE.bazel  build.sh
bazel/01-cross-build/toolchains_arm_gnu/: MODULE.bazel  build.sh  xmake.lua
bazel/01-cross-build/toolchains_arm_gnu/aarch64-none-elf/: BUILD
bazel/01-cross-build/toolchains_arm_gnu/aarch64-none-linux-gnu/: BUILD
bazel/01-cross-build/toolchains_arm_gnu/arm-none-eabi/: BUILD
bazel/01-cross-build/toolchains_arm_gnu/arm-none-linux-gnueabihf/: BUILD
bazel/01-cross-build/toolchains_arm_gnu/custom/toolchain/: BUILD
bazel/01-cross-build/toolchains_arm_gnu/examples/arm-linux/: BUILD  library.cc
bazel/01-cross-build/toolchains_arm_gnu/examples/arm-none/: BUILD
bazel/01-cross-build/toolchains_arm_gnu/examples/custom/: BUILD  main.c
bazel/01-cross-build/toolchains_arm_gnu/examples/custom/toolchain/: BUILD
bazel/02-cuda-target/: .bazelrc  MODULE.bazel  build.sh
bazel/02-cuda-target/cublas/: BUILD
bazel/02-cuda-target/if-cuda/: BUILD  kernel.h
bazel/02-cuda-target/thrust/: BUILD.bazel
cmake-basic/A-hello-cmake/: build.sh  main.cc  xmake.lua
cmake-basic/B-hello-headers/: CMakeLists.txt  xmake.lua
cmake-basic/B-hello-headers/src/: main.cc
cmake-basic/C-static-library/: build.sh  xmake.lua
cmake-basic/C-static-library/src/: hello.cc  main.cc
cmake-basic/D-shared-library/: xmake.lua
cmake-basic/D-shared-library/src/: hello.cc  main.cc
cmake-basic/E-installing/: CMakeLists.txt  build.sh  xmake.lua
cmake-basic/E-installing/src/: hello.cc  main.cc
cmake-basic/G-compile-flags/: main.cc
cmake-basic/H-third-party-library/: xmake.lua
cmake-basic/I-compiling-with-clang/: build.sh
cmake-basic/J-building-with-ninja/: build.sh
cmake-cross-build/: CMakeLists.txt  README.md  build.sh
cmake/01-basic/A-hello-cmake/: CMakeLists.txt  build.sh  xmake.lua
cmake/01-basic/B-hello-headers/: CMakeLists.txt  build.sh  xmake.lua
cmake/01-basic/C-static-library/: CMakeLists.txt  xmake.lua
cmake/01-basic/D-shared-library/: CMakeLists.txt  build.sh  xmake.lua
cmake/01-basic/D-shared-library/include/shared/: hello.h
cmake/01-basic/F-build-type/: CMakeLists.txt  build.sh  main.cc
cmake/01-basic/G-compile-flags/: CMakeLists.txt  build.sh
cmake/01-basic/H-third-party-library/: CMakeLists.txt  build.sh  main.cc  xmake.lua
cmake/01-basic/K-cpp-standard/i-common-method/: CMakeLists.txt  build.sh
cmake/01-basic/L-cuda-target/: CMakeLists.txt  build.sh
cmake/02-sub-projects/: CMakeLists.txt  build.sh  xmake.lua
cmake/02-sub-projects/subbinary/: CMakeLists.txt  main.cc
cmake/02-sub-projects/sublibrary2/: CMakeLists.txt
cmake/02-sub-projects/sublibrary2/include/sublib2/: sublib2.h
cmake/03-code-generation/B-protobuf/: CMakeLists.txt  build.sh  build_xmake.sh  main.cc  xmake.lua
cmake/04-static-analysis/B-clang-format/: CMakeLists.txt  README.md  build.sh
cmake/04-static-analysis/B-clang-format/cmake/modules/: FindClangFormat.cmake  clang-format.cmake
cmake/04-static-analysis/B-clang-format/cmake/scripts/: clang-format-check-changed.py
cmake/04-static-analysis/B-clang-format/subproject1/: CMakeLists.txt  main1.cc
cmake/04-static-analysis/B-clang-format/subproject2/: main2.cc
cmake/04-static-analysis/C-cppcheck/: CMakeLists.txt  build.sh
cmake/04-static-analysis/C-cppcheck/cmake/: analysis.cmake
cmake/04-static-analysis/C-cppcheck/cmake/modules/: FindCppCheck.cmake
cmake/04-static-analysis/C-cppcheck/subproject1/: CMakeLists.txt
cmake/04-static-analysis/C-cppcheck/subproject2/: CMakeLists.txt  main2.cc
cmake/04-static-analysis/D-cppcheck-compile-commands/: CMakeLists.txt  build.sh
cmake/04-static-analysis/D-cppcheck-compile-commands/cmake/modules/: FindCppCheck.cmake
cmake/05-unit-testing/boost/: CMakeLists.txt  build.sh  unit_tests.cc
cmake/05-unit-testing/google-test-download/: CMakeLists.txt  build.sh  reverse.h  unit_tests.cc
cmake/06-installer/deb/: CMakeLists.txt  build.sh
cmake/06-installer/deb/src/: hello.cc  main.cc
cmake/07-cross-build/: README.md
cmake/07-cross-build/cuda-target/: CMakeLists.txt  README.md  build.sh
cmake/07-cross-build/official-cross-aarch64/: CMakeLists.txt  build.sh  main.cc
cmake/07-cross-build/official-using-clang/: CMakeLists.txt  build.sh  main.cc
docker/: cuda-cccl-cross-aarch64-11-8_11.8.89-1_all.deb  cuda-cudart-cross-aarch64-11-8_11.8.89-1_all.deb  cuda-driver-cross-aarch64-11-8_11.8.89-1_all.deb
docs/: bazel-bzlmod.md  bazel-usage.md  bazel.md  cmake.md
scripts/: docker.sh  run_bazel_examples.sh  run_cmake_examples.sh  run_xmake_examples.sh
xmake-cross-build/clang-sysroot-target/: build.sh  toolchain.lua  xmake.lua
xmake-cross-build/g++-aarch64-linux-gnu/: build.sh  xmake.lua
xmake-cross-build/llvm-11/: build.sh  xmake.lua
xmake-cross-build/zig/: build.sh  xmake.lua
xmake/02-cross-build/zig/: build.sh  (+1 more)
(+68 files in other folders)
