module(
    name = "bazel-cuda-target",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cuda", version = "0.2.5")

# pick a specific version (this is optional an can be skipped)
# archive_override(
#     module_name = "rules_cuda",
#     integrity = "{SRI value}",  # see https://developer.mozilla.org/en-US/docs/Web/Security/Subresource_Integrity
#     urls = "https://github.com/bazel-contrib/rules_cuda/archive/{git_commit_hash}.tar.gz",
#     strip_prefix = "rules_cuda-{git_commit_hash}",
# )

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",
)
use_repo(cuda, "local_cuda")
