"""
This module provides examples for bazel cross building.

Author: TOMOCAT
Date: 2025-03-07
"""
module(
    name = "bazel-cross-build2",
    version = "1.0.0",
)

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_cc", version = "0.0.9")

############################################################
# toolchains_arm_gnu
# 
# @see https://github.com/hexdae/toolchains_arm_gnu
############################################################
bazel_dep(name = "toolchains_arm_gnu", version = "1.0.4")

arm_toolchain = use_extension("@toolchains_arm_gnu//:extensions.bzl", "arm_toolchain")

arm_toolchain.arm_none_eabi()
use_repo(arm_toolchain, "arm_none_eabi")
register_toolchains("@arm_none_eabi//toolchain:all")

arm_toolchain.arm_none_linux_gnueabihf()
use_repo(arm_toolchain, "arm_none_linux_gnueabihf")
register_toolchains("@arm_none_linux_gnueabihf//toolchain:all")

arm_toolchain.aarch64_none_elf()
use_repo(arm_toolchain, "aarch64_none_elf")
register_toolchains("@aarch64_none_elf//toolchain:all")

arm_toolchain.aarch64_none_linux_gnu()
use_repo(arm_toolchain, "aarch64_none_linux_gnu")
register_toolchains("@aarch64_none_linux_gnu//toolchain:all")

register_toolchains("//examples/custom/toolchain:all")
